--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "firebase": "^9.5.0",
     "typescript-simple-di": "^1.1.4",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
